--- a/index.html
+++ b/index.html
@@ -1,1 +1,260 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- TODO Add my squarespace meta data -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+
+      * {
+        font-family: 'Open Sans', sans-serif;
+      }
+
+      h1,
+      h2,
+      h3 {
+        font-family: 'Poppins', sans-serif;
+      }
+
+      .poppins-thin {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 100;
+        font-style: normal;
+      }
+
+      .poppins-thin-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 100;
+        font-style: italic;
+      }
+
+      .poppins-extralight {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 200;
+        font-style: normal;
+      }
+
+      .poppins-extralight-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 200;
+        font-style: italic;
+      }
+
+      .poppins-light {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 300;
+        font-style: normal;
+      }
+
+      .poppins-light-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 300;
+        font-style: italic;
+      }
+
+      .poppins-regular {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+
+      .poppins-regular-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        font-style: italic;
+      }
+
+      .poppins-medium {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+        font-style: normal;
+      }
+
+      .poppins-medium-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+        font-style: italic;
+      }
+
+      .poppins-semibold {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        font-style: normal;
+      }
+
+      .poppins-semibold-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        font-style: italic;
+      }
+
+      .poppins-bold {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
+
+      .poppins-bold-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 700;
+        font-style: italic;
+      }
+
+      .poppins-extrabold {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 800;
+        font-style: normal;
+      }
+
+      .poppins-extrabold-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 800;
+        font-style: italic;
+      }
+
+      .poppins-black {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 900;
+        font-style: normal;
+      }
+
+      .poppins-black-italic {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 900;
+        font-style: italic;
+      }
+
+      .background-image-div {
+        background-image: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.9),
+            rgba(0, 0, 0, 0.1)
+          ),
+          url('./Audi-R8_V10-2016-1280-1b.jpg');
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 66vh; /* Adjust the height as needed */
+      }
+    </style>
+  </head>
+
+  <body
+    class="relative bg-white text-slate-800 text-sm sm:text-base flex flex-col min-h-screen"
+  >
+    <main class="flex flex-col display: contents">
+      <!-- Header + Hero -->
+      <section>
+        <div
+          class="flex flex-col flex-1 max-w-[1400px] background-image-div text-slate-50"
+        >
+          <!-- Header -->
+          <header class="flex flex-col relative z-20">
+            <div
+              class="max-w-[1400] mx-auto w-full flex items-center justify-between p-4 py-6"
+            >
+              <a href="/"
+                ><h1 class="font-semibold">Stephen Anthony Rose</h1></a
+              >
+
+              <button class="md:hidden grid place-items-center">
+                <i class="fa-solid fa-bars"></i>
+              </button>
+              <nav class="hidden md:flex items-center gap-4 lg:gap-6">
+                <a
+                  class="duration-300 hover:text-amber-200 cursor-pointer"
+                  href="#about"
+                  >About</a
+                >
+                <a
+                  class="duration-300 hover:text-amber-200 cursor-pointer"
+                  href="#projects"
+                  >Projects</a
+                >
+              </nav>
+            </div>
+          </header>
+
+          <!-- Hero -->
+          <div
+            class="flex flex-col gap-10 flex-1 items-center justify-center pb-10 md:pb-14"
+          >
+            <h2
+              class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl max-w-[1200px] mx-auto w-full text-center font-semibold"
+            >
+              Hello
+            </h2>
+            <h3
+              class="text-lg sm:text-xl md:text-2xl max-w-[1000px] mx-auto w-full text-center"
+            >
+              Machine Learning, Data Science, Genomics, plus some extras
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <!-- About -->
+      <section>
+        <div class="flex flex-col items-center justify-center py-10" id="about">
+          <h2 class="text-4xl font-semibold">Who am I</h2>
+          <img
+            class="rounded-full p-8"
+            src="https://avatars.githubusercontent.com/u/3430249?v=4"
+          />
+          <p class="max-w-[500px] mx-auto w-full text-center">
+            I'm a Machine Learning Engineer / Data Scientists that loves
+            statistics, machine learning, programming, planes, cars,
+            entrepreneurship and people that try to legitimately make a positive
+            change in the world.
+          </p>
+          <button
+            class="rounded bg-slate-900 hover:bg-slate-500 duration-400 text-xl text-white mt-8 p-4 px-8"
+          >
+            <a href="https://github.com/arose13" target="_blank"
+              ><i class="fa-brands fa-github"></i> / arose13</a
+            >
+          </button>
+          <button
+            class="rounded bg-slate-900 hover:bg-slate-500 duration-400 text-xl text-white mt-8 p-4 px-8"
+          >
+            <a href="https://www.linkedin.com/in/arose13/" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i> / arose13</a
+            >
+          </button>
+        </div>
+      </section>
+
+        <!-- Projects -->
+        <section>
+            <div class="flex flex-col items-center justify-center py-10" id="projects">
+                <h2 class="text-4xl font-semibold">Projects - Adding Soon</h2>
+                <!-- TODO (2024-02-21) -->
+            </div>
+        </section>
+
+      <!-- Footer -->
+      <section></section>
+    </main>
+  </body>
+</html>
