--- a/index.html
+++ b/index.html
@@ -245,13 +245,16 @@
         </div>
       </section>
 
-        <!-- Projects -->
-        <section>
-            <div class="flex flex-col items-center justify-center py-10" id="projects">
-                <h2 class="text-4xl font-semibold">Projects - Adding Soon</h2>
-                <!-- TODO (2024-02-21) -->
-            </div>
-        </section>
+      <!-- Projects -->
+      <section>
+        <div
+          class="flex flex-col items-center justify-center py-10"
+          id="projects"
+        >
+          <h2 class="text-4xl font-semibold">Projects - Adding Soon</h2>
+          <!-- TODO (2024-02-21) -->
+        </div>
+      </section>
 
       <!-- Footer -->
       <section></section>
